--- a/src/TeachMeSkills/Lesson47RestAPI/pom.xml
+++ b/src/TeachMeSkills/Lesson47RestAPI/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>spring-restdocs-mockmvc</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
