--- a/src/TeachMeSkills/Lesson47RestAPI/pom.xml
+++ b/src/TeachMeSkills/Lesson47RestAPI/pom.xml
@@ -67,6 +67,22 @@
             <artifactId>validation-api</artifactId>
             <version>1.1.0.Final</version>
         </dependency>
+
+
+
+<!--        for jdl  -->
+        <dependency>
+        <groupId>ai.djl</groupId>
+        <artifactId>api</artifactId>
+        <version>0.26.0</version>
+    </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
