--- a/src/TeachMeSkills/Lesson47RestAPI/pom.xml
+++ b/src/TeachMeSkills/Lesson47RestAPI/pom.xml
@@ -81,6 +81,18 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>ai.djl.mxnet</groupId>
+            <artifactId>mxnet-native-mkl</artifactId>
+            <version>1.6.0-a</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ai.djl.mxnet</groupId>
+            <artifactId>mxnet-model-zoo</artifactId>
+            <version>0.20.0</version>
+        </dependency>
+
 
 
     </dependencies>
