--- a/src/TeachMeSkills/EnglishBook/src/main/resources/application.properties
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.html
