--- a/src/TeachMeSkills/EnglishBook/pom.xml
+++ b/src/TeachMeSkills/EnglishBook/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>thymeleaf-extras-java8time</artifactId>
             <version>3.0.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
