--- a/src/TeachMeSkills/EnglishBook/src/main/resources/application.properties
+++ b/src/TeachMeSkills/EnglishBook/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
+logging.level.org.springframework.security=DEBUG
+
 
